--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,15 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2018
-  },
-  "extends": ["eslint:recommended", "prettier"],
-  "env": {
-    "es6": true,
-    "node": true,
-    "jest": true
-  },
-  "rules": {
-    "no-console": "warn"
-  }
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es2021": true
+    },
+    "extends": [
+        "airbnb-base"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest"
+    },
+    "rules": {
+    }
 }
