--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "lint": "eslint"
+    "lint": "eslint src/",
+    "eslint:fix": "eslint src/ --fix"
   },
   "dependencies": {
-    "express": "^4.17.3",
     "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
-    "faker": "^4.3.4",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "faker": "^5.5.3",
     "joi": "^17.6.0"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15"
   }
